// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`New Stack Button creates correct snapshot 1`] = `
<div>
  <button
    aria-label="add"
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Create Stack
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`New Stack Button uses labelPrefix if present 1`] = `
<div>
  <button
    aria-label="add"
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Request Stack
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;
